# genomics_project

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  cachegrind_comparison_not_parallel.csv  cachegrind_comparison_parallel.csv  data_gen.py  make_graphs.py  make_graphs_cache.py  make_graphs_time.py  output_results.csv  output_results_fourrussians.csv  penalty.csv  run_cache_test.py  run_data.py  run_data_time.py  run_test.sh  runtime_results_not_parallel.csv  runtime_results_parallel.csv  terrible_test.txt  test_input.txt  test_length_1000_file_1.txt  test_length_10_file_1.txt  test_length_125_file_1.txt  test_length_16000_file_1.txt  test_length_160_file_1.txt  test_length_2000_file_1.txt  test_length_20_file_1.txt  test_length_250_file_1.txt  test_length_320_file_1.txt  test_length_4000_file_1.txt  test_length_40_file_1.txt  test_length_500_file_1.txt  test_length_8000_file_1.txt  test_length_80_file_1.txt  testfile1.txt  testfile2.txt  vcpkg.json
cachegrind_outputs/: cachegrind.out.Affine_0  cachegrind.out.Affine_1  cachegrind.out.Affine_2  cachegrind.out.Global_0  cachegrind.out.Global_1  cachegrind.out.Global_2  cachegrind.out.Hirschberg  cachegrind.out.Local_0  cachegrind.out.Local_1  cachegrind.out.Local_2
src/: algos.cpp  algos.hpp  alignment.cpp  alignment_BB.cpp  block_based_alignment.cpp  block_based_alignment.hpp  data_gen.py  four_russians.cpp  hirschberg.cpp
src/four_russians/: FourRussians.cpp  FourRussians.h
